--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -22,11 +22,14 @@
     padding: 8px 20px;
     border: 1px solid var(--primary);
     transition: all 0.3s ease-out;
+    margin-left: 20px;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .btn--medium {
-    padding: 8px 20px;
-    font-size: 20px;
+    padding: 2px 20px;
+    font-size: 17px;
 }
 
 .btn--large {
