--- a/src/pages/TextArea.css
+++ b/src/pages/TextArea.css
@@ -20,8 +20,9 @@
 }
 
 .p-about {
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 40px;
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
 .h2-about {
