--- a/src/pages/TextArea.css
+++ b/src/pages/TextArea.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 400px;
-    width: 1200px;
+    min-height: 60vh;
+    width: 80vw;
     flex-direction: column;
     text-align: justify;
     padding: 0 20px;
